# ide

./: .gitignore  BUILD_STATUS.md  Cargo.toml  README.md  build-aidea-dmg.sh
.github/workflows/: build-dmg.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: admin.rs  agent.rs  audit.rs  auth.rs  chat.rs  ckg.rs  collab.rs  config.rs  context_manager.rs  craft.rs  engineering.rs  health.rs  lib.rs  llm.rs  main.rs  metrics.rs  permissions.rs  planner.rs  principal.rs  quest.rs  retrieval.rs  security.rs  self_heal.rs  server.rs  tool_executor.rs  validator.rs
crates/core/src/host/: bridge.rs  cli_host.rs  grpc_host_client.rs  mod.rs  provider.rs
crates/core/tests/: eval.rs  qa_v05_critical.rs  qa_v10_stage_a.rs  qa_v10_stage_b.rs  qa_v15_stage_b.rs  qa_v20_stage_a.rs
crates/probe/: Cargo.toml
crates/probe/src/: completion.rs  lib.rs  ollama.rs  openai.rs
deploy/: Dockerfile  docker-compose.yml
docs/: class-diagram.mermaid  compliance-mapping.md  sequence-diagram.mermaid  system_design.md  test-report.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/scripts/: build-dmg.sh  fetch-binaries.sh
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/resources/migrations/: 0001_init.sql  0002_v05.sql
gui/src-tauri/resources/models/nes-tab/: Modelfile
gui/src-tauri/src/: config.rs  error.rs  ipc.rs  main.rs  model_backend.rs  state.rs
gui/src-tauri/src/bootstrap/: mod.rs  ollama.rs  pg.rs  serve.rs  sidecar.rs
gui/src-tauri/src/commands/: agent.rs  chat.rs  collab.rs  connection.rs  craft.rs  health.rs  mod.rs  model.rs  quest.rs
gui/src-tauri/src/domain/: collab.rs  core_config.rs  craft.rs  fs_host.rs  mod.rs  quest.rs
gui/src-tauri/src/grpc/: client.rs  mod.rs  stream.rs
gui/src/api/: invoke.ts
gui/src/pages/: BootstrapPage.tsx  ChatPage.tsx  CollabPage.tsx  ConsolePage.tsx  CraftPage.tsx  QuestPage.tsx  SettingsPage.tsx
gui/src/types/: models.ts
migrations/: 0003_v10.sql  0004_v15.sql  0005_v20.sql
proto/: ide_core.proto
scripts/: aidea-serve.sh  nes-tab.Modelfile
